--- a/ZoningToolkit.csproj
+++ b/ZoningToolkit.csproj
@@ -2,33 +2,50 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFramework>net472</TargetFramework>
 		<Configurations>Debug;Release</Configurations>
-		
-		<!--The folder where Game.dll is located. Set it only if the game is not installed in the default location, otherwise keep it empty-->
-		<CustomManagedPath>C:\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed</CustomManagedPath>
-		
-		<!--Path to the text file where PDX account data is stored which is required to publish the mod-->
-		<!--Keep it outside of project in order to not commit it or share accidentally-->
-		<!--The file should contain 2 lines:-->
-		<!--Your.PDX@Account.login-->
-		<!--Your-PDX-Account-Pa$$word-->
-		<PDXAccountDataPath>C:\Users\Zeeshan\OneDrive\Desktop\pdx_account.txt</PDXAccountDataPath>
-		
-		<!--The file where mod information which is required for publishing mod on PDX mods are stored-->
+
+		<!-- Paradox Mods publish config (keep if you use it) -->
 		<PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
 
-		<LangVersion>11.0</LangVersion>
+		<!-- Versioning -->
+		<Version>1.0.0</Version>
+		<FileVersion>$(Version).0</FileVersion>
+		<AssemblyVersion>1.0.0.0</AssemblyVersion>
+
+		<!-- Assembly/product metadata (rename later when we switch to ZoneControl) -->
+		<Company>$(Authors)</Company>
+		<AssemblyTitle>ZoningToolkit</AssemblyTitle>
+		<AssemblyName>ZoningToolkit</AssemblyName>
+		<Product>ZoningToolkit</Product>
+		<Title>ZoningToolkit</Title>
+
+		<!-- Keep warnings strict (remove if too noisy) -->
+		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+
+		<!-- Only set this if you *must* override the Managed path -->
+		<CustomManagedPath></CustomManagedPath>
 	</PropertyGroup>
-	
-	<!--Imports must be after PropertyGroup block-->
+
+	<!-- Release has short informational version -->
+	<PropertyGroup Condition="'$(Configuration)'=='Release'">
+		<InformationalVersion>$(Version)</InformationalVersion>
+		<IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
+		<DefineConstants>TRACE</DefineConstants>
+	</PropertyGroup>
+
+	<!-- Debug includes +commit in informational version -->
+	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
+		<InformationalVersion>$(Version)</InformationalVersion>
+		<IncludeSourceRevisionInInformationalVersion>true</IncludeSourceRevisionInInformationalVersion>
+		<DefineConstants>TRACE;DEBUG</DefineConstants>
+	</PropertyGroup>
+
+	<!-- Let the CS2 toolchain provide TargetFramework and resolve refs -->
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets" />
 
 	<ItemGroup>
-		<Reference Include="Colossal.Mathematics">
-		  <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\Colossal.Mathematics.dll</HintPath>
-		</Reference>
+		<!-- Ensure ALL game/Unity/Colossal refs are not copied to output -->
 		<Reference Include="Game">
 			<Private>false</Private>
 		</Reference>
@@ -48,6 +65,9 @@
 			<Private>false</Private>
 		</Reference>
 		<Reference Include="Colossal.Localization">
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="Colossal.Mathematics">
 			<Private>false</Private>
 		</Reference>
 		<Reference Include="UnityEngine.CoreModule">
@@ -82,22 +102,22 @@
 		</Reference>
 	</ItemGroup>
 
-	<ItemGroup>
-		<None Include="$(ModPropsFile)" Link="Properties\Mod.props" />
-		<None Include="$(ModTargetsFile)" Link="Properties\Mod.targets" />
-	</ItemGroup>
-
-	<!-- This will build the React UI before building the Mod -->
-	<Target Name="BuildUI" AfterTargets="AfterBuild">
-		<Exec Command="npm run build" WorkingDirectory="$(ProjectDir)/zoning-toolkit-ui" />
+	<!-- Build your Cohtml/React UI bundle (only if the UI project exists) -->
+	<Target Name="BuildUI" AfterTargets="AfterBuild" Condition="Exists('$(ProjectDir)zoning-toolkit-ui\package.json')">
+		<Exec Command="npm run build" WorkingDirectory="$(ProjectDir)zoning-toolkit-ui" />
 	</Target>
 
-	<Target Name="CopyUIFiles" AfterTargets="DeployWIP">
+	<!-- Copy the UI bundle into the deploy directory (only if UI output exists) -->
+	<Target Name="CopyUIFiles" AfterTargets="DeployWIP" Condition="Exists('bin\UI')">
 		<ItemGroup>
-			<UIFiles Include="bin\UI\**\*.*"/>
+			<UIFiles Include="bin\UI\**\*.*" />
 		</ItemGroup>
+		<Copy SourceFiles="@(UIFiles)" DestinationFiles="@(UIFiles->'$(DeployDir)\%(RecursiveDir)%(Filename)%(Extension)')" />
+	</Target>
 
-		<Copy SourceFiles="@(UIFiles)" DestinationFiles="@(UIFiles->'$(DeployDir)\%(RecursiveDir)%(Filename)%(Extension)'"/>
+	<!-- Optional: prints the active TargetFramework during build; remove anytime -->
+	<Target Name="ShowTFM" BeforeTargets="Build">
+		<Message Importance="High" Text="TargetFramework=$(TargetFramework)" />
 	</Target>
 
 </Project>
