--- a/zoning-toolkit-ui/package.json
+++ b/zoning-toolkit-ui/package.json
@@ -8,7 +8,8 @@
     "build": "webpack",
     "dev": "webpack --watch",
     "update": "npx create-csii-ui-mod update",
-    "clean": "npx create-csii-ui-mod clean"
+    "clean": "npx create-csii-ui-mod clean",
+    "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\""
   },
   "exclude": [
     "node_modules",
@@ -22,9 +23,13 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.6",
     "css-loader": "^6.7.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.0.2",
@@ -34,6 +39,7 @@
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^4.8.4",
+    "typescript-eslint": "^8.49.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
