--- a/zoning-toolkit-ui/package.json
+++ b/zoning-toolkit-ui/package.json
@@ -8,6 +8,7 @@
     "build": "webpack",
     "dev": "webpack --watch",
     "update": "npx create-csii-ui-mod update",
+    "delete": "npx create-csii-ui-mod delete",
     "clean": "npx create-csii-ui-mod clean",
     "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\""
   },
@@ -17,22 +18,22 @@
   ],
   "dependencies": {
     "classnames": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.6",
-    "css-loader": "^6.7.1",
+    "@types/react-dom": "^18.0.9",
+    "css-loader": "^6.7.2",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
+    "mini-css-extract-plugin": "^2.7.0",
     "sass": "^1.69.5",
-    "sass-loader": "^13.0.2",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.3",
     "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "^5.3.10",
@@ -40,7 +41,7 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^4.8.4",
     "typescript-eslint": "^8.49.0",
-    "webpack": "^5.74.0",
+    "webpack": "^5.97.1",
     "webpack-cli": "^4.10.0"
   }
 }
