--- a/zoning-toolkit-ui/tsconfig.json
+++ b/zoning-toolkit-ui/tsconfig.json
@@ -1,6 +1,7 @@
+// tsconfig.json
 {
   "compilerOptions": {
-    "jsx":"react-jsx",
+    "jsx": "react-jsx",
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
@@ -10,10 +11,10 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "src",
     "skipLibCheck": true,
-    "typeRoots": ["./types"],
+    "typeRoots": [ "./types" ],
     "resolveJsonModule": true,
     "paths": {
-      "mod.json": ["../mod.json"]
+      "mod.json": [ "../mod.json" ]
     }
-  },
+  }
 } 
