--- a/zoning-toolkit-ui/package.json
+++ b/zoning-toolkit-ui/package.json
@@ -17,31 +17,31 @@
     "build"
   ],
   "dependencies": {
-    "classnames": "^2.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "classnames": "2.3.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-draggable": "^4.4.6",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "css-loader": "^6.7.2",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "css-loader": "6.7.2",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
-    "mini-css-extract-plugin": "^2.7.0",
+    "mini-css-extract-plugin": "2.7.0",
     "sass": "^1.69.5",
-    "sass-loader": "^13.2.0",
+    "sass-loader": "13.2.0",
     "style-loader": "^3.3.3",
-    "swc-loader": "^0.2.3",
+    "swc-loader": "0.2.3",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^4.8.4",
+    "typescript": "4.8.4",
     "typescript-eslint": "^8.49.0",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^4.10.0"
+    "webpack": "5.97.1",
+    "webpack-cli": "4.10.0"
   }
 }
