--- a/zoning-toolkit-ui/package.json
+++ b/zoning-toolkit-ui/package.json
@@ -27,9 +27,9 @@
     "@eslint/js": "^9.39.1",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "css-loader": "6.7.2",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^16.5.0",
     "mini-css-extract-plugin": "2.7.0",
     "sass": "^1.69.5",
@@ -42,6 +42,7 @@
     "typescript": "4.8.4",
     "typescript-eslint": "^8.49.0",
     "webpack": "5.97.1",
-    "webpack-cli": "4.10.0"
+    "webpack-cli": "4.10.0",
+    "css-loader": "6.7.2"
   }
 }
