--- a/zoning-toolkit-ui/tsconfig.json
+++ b/zoning-toolkit-ui/tsconfig.json
@@ -10,10 +10,15 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "src",
     "skipLibCheck": true,
-    "typeRoots": ["./types", "./node_modules/@types"],
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],
     "resolveJsonModule": true,
     "paths": {
-      "mod.json": ["../mod.json"]
+      "mod.json": [
+        "../mod.json"
+      ]
     }
   }
 }
