--- a/ZoneTools.csproj
+++ b/ZoneTools.csproj
@@ -1,107 +1,78 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<!--
+    ZoneTools.csproj
+    CS2 mod: "Zone Tools" [ZT]
+  -->
 
 	<PropertyGroup>
-		<OutputType>Library</OutputType>
 		<Configurations>Debug;Release</Configurations>
-
 		<!-- Paradox Mods publish config -->
 		<PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
+		<!-- Only set this if you *must* override the Managed path -->
+		<CustomManagedPath></CustomManagedPath>
+		<Nullable>enable</Nullable>
 
-		<!-- Versioning: single source of truth -->
+		<!-- Single source of truth for version number -->
 		<Version>1.1.2</Version>
 		<AssemblyVersion>$(Version).0</AssemblyVersion>
 		<FileVersion>$(Version).0</FileVersion>
 
 		<!-- Assembly/product metadata -->
+		<RootNamespace>ZoneTools</RootNamespace>
 		<AssemblyTitle>ZoneTools</AssemblyTitle>
 		<AssemblyName>ZoneTools</AssemblyName>
-		<Product>ZoneTools</Product>
-		<Title>ZoneTools</Title>
-
-		<Nullable>enable</Nullable>
-
-		<!-- Only set this if you *must* override the Managed path -->
-		<CustomManagedPath></CustomManagedPath>
 
 		<!-- NPM runner + UI build strictness -->
-		<!-- On Windows, `npm` works (resolves npm.cmd). Change to npm.cmd if preferred. -->
+		<!-- On Windows, `npm` or npm.cmd works -->
 		<NpmCmd>npm</NpmCmd>
 	</PropertyGroup>
 
-	<!-- Release has short informational version -->
-	<PropertyGroup Condition="'$(Configuration)'=='Release'">
-		<InformationalVersion>$(Version)</InformationalVersion>
-		<IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
-		<DefineConstants>TRACE</DefineConstants>
-	</PropertyGroup>
-
-	<!-- Debug includes +commit in informational version -->
+	<!-- Optional: simple DEBUG/RELEASE constants -->
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
-		<InformationalVersion>$(Version)</InformationalVersion>
 		<IncludeSourceRevisionInInformationalVersion>true</IncludeSourceRevisionInInformationalVersion>
 		<DefineConstants>TRACE;DEBUG</DefineConstants>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)'=='Release'">
+		<IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
+		<DefineConstants>TRACE</DefineConstants>
+	</PropertyGroup>
+
+	<!--Imports must be after PropertyGroup block-->
 	<!-- Let the CS2 toolchain provide TargetFramework and resolve refs -->
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
 	<Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets" />
 
 	<ItemGroup>
 		<!-- Ensure ALL game/Unity/Colossal refs are not copied to output -->
-		<Reference Include="Game">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Colossal.Core">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Colossal.Logging">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Colossal.IO.AssetDatabase">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Colossal.UI">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Colossal.UI.Binding">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Colossal.Localization">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Colossal.Mathematics">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="UnityEngine.CoreModule">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Unity.Burst">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Unity.Collections">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Unity.Entities">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Unity.Mathematics">
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Unity.InputSystem">
-			<Private>false</Private>
-		</Reference>
+		<Reference Include="Game"> <Private>false</Private> </Reference>
+		<Reference Include="Colossal.Core"> <Private>false</Private></Reference>
+		<Reference Include="Colossal.Logging"><Private>false</Private></Reference>
+		<Reference Include="Colossal.IO.AssetDatabase"><Private>false</Private></Reference>
+		<Reference Include="Colossal.UI"><Private>false</Private></Reference>
+		<Reference Include="Colossal.UI.Binding"><Private>false</Private></Reference>
+		<Reference Include="Colossal.Localization"><Private>false</Private></Reference>
+		<Reference Include="Colossal.Mathematics"><Private>false</Private>	</Reference>
+		<Reference Include="UnityEngine.CoreModule"><Private>false</Private></Reference>
+
+		<Reference Include="Unity.Burst"><Private>false</Private></Reference>
+		<Reference Include="Unity.Collections"><Private>false</Private></Reference>
+		<Reference Include="Unity.Entities"><Private>false</Private></Reference>
+		<Reference Include="Unity.Mathematics">	<Private>false</Private>	</Reference>
+		<Reference Include="Unity.InputSystem"><Private>false</Private></Reference>
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Update="System">
-			<Private>false</Private>
-		</Reference>
-		<Reference Update="System.Core">
-			<Private>false</Private>
-		</Reference>
-		<Reference Update="System.Data">
-			<Private>false</Private>
-		</Reference>
+		<Reference Update="System"><Private>false</Private></Reference>
+		<Reference Update="System.Core"><Private>false</Private></Reference>
+		<Reference Update="System.Data"><Private>false</Private></Reference>
+	</ItemGroup>
+
+
+	<!-- Link CS2 Mod toolchain files in Properties/ for easy viewing -->
+	<ItemGroup>
+		<None Include="$(ModPropsFile)" Link="Properties\Mod.props" />
+		<None Include="$(ModTargetsFile)" Link="Properties\Mod.targets" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -112,30 +83,66 @@
 	<!-- Run npm ci AFTER C# build, only when needed:
        - first time (node_modules missing), OR
        - package-lock.json changed since last run (tracked by .stamp) -->
-	<Target Name="NpmInstallIfNeeded" AfterTargets="Build" Condition="Exists('$(ProjectDir)zoning-toolkit-ui\package.json')" Inputs="$(ProjectDir)zoning-toolkit-ui\package-lock.json" Outputs="$(ProjectDir)zoning-toolkit-ui\node_modules\.stamp">
+	<Target Name="NpmInstallIfNeeded"
+			AfterTargets="Build"
+			Condition="Exists('$(ProjectDir)zoning-toolkit-ui\package.json')"
+			Inputs="$(ProjectDir)zoning-toolkit-ui\package-lock.json"
+			Outputs="$(ProjectDir)zoning-toolkit-ui\node_modules\.stamp">
+
 		<Message Text="ZONE TOOLS UI: npm ci (first-time or lockfile changed)..." Importance="high" />
-		<Exec Command="$(NpmCmd) ci" WorkingDirectory="$(ProjectDir)zoning-toolkit-ui" IgnoreExitCode="true">
+
+		<Exec Command="$(NpmCmd) ci"
+			  WorkingDirectory="$(ProjectDir)zoning-toolkit-ui"
+			  IgnoreExitCode="true">
 			<Output TaskParameter="ExitCode" PropertyName="NpmCiExit" />
 		</Exec>
-		<!-- Soft-fail (warn instead of error) -->
-		<Warning Condition="'$(NpmCiExit)' != '0'" Text="ZONE TOOLS UI: 'npm ci' failed (exit $(NpmCiExit)). Continuing C# build." />
-		<!-- On success, write/update the stamp -->
-		<WriteLinesToFile Condition="'$(NpmCiExit)' == '0'" File="$(ProjectDir)zoning-toolkit-ui\node_modules\.stamp" Lines="ok" Overwrite="true" />
+
+		<!-- Release: hard fail -->
+		<Error Condition="'$(Configuration)'=='Release' AND '$(NpmCiExit)'!='0'"
+			   Text="ZONE TOOLS UI: 'npm ci' failed (exit $(NpmCiExit)). Release build aborted." />
+
+		<!-- Debug/others: warn -->
+		<Warning Condition="'$(Configuration)'!='Release' AND '$(NpmCiExit)'!='0'"
+				 Text="ZONE TOOLS UI: 'npm ci' failed (exit $(NpmCiExit)). Continuing (non-Release)." />
+
+		<WriteLinesToFile Condition="'$(NpmCiExit)' == '0'"
+						  File="$(ProjectDir)zoning-toolkit-ui\node_modules\.stamp"
+						  Lines="ok"
+						  Overwrite="true" />
 	</Target>
 
+
 	<!-- Always run the UI bundle AFTER C# build; ensure it runs *after* NpmInstallIfNeeded -->
-	<Target Name="BuildUI" AfterTargets="Build" DependsOnTargets="NpmInstallIfNeeded" Condition="Exists('$(ProjectDir)zoning-toolkit-ui\package.json')">
+	<Target Name="BuildUI"
+        AfterTargets="Build"
+        DependsOnTargets="NpmInstallIfNeeded"
+        Condition="Exists('$(ProjectDir)zoning-toolkit-ui\package.json')">
+
 		<Message Text="ZONE TOOLS UI: npm run build ($(Configuration))..." Importance="high" />
-		<Exec Command="$(NpmCmd) run build" WorkingDirectory="$(ProjectDir)zoning-toolkit-ui" IgnoreExitCode="true">
+
+		<Exec Command="$(NpmCmd) run build"
+			  WorkingDirectory="$(ProjectDir)zoning-toolkit-ui"
+			  IgnoreExitCode="true">
 			<Output TaskParameter="ExitCode" PropertyName="NpmBuildExit" />
 		</Exec>
-		<!-- Soft-fail (warn instead of error) -->
-		<Warning Condition="'$(NpmBuildExit)' != '0'" Text="ZONE TOOLS UI: 'npm run build' failed (exit $(NpmBuildExit)). Continuing C# build." />
+
+		<!-- Release: hard fail -->
+		<Error Condition="'$(Configuration)'=='Release' AND '$(NpmBuildExit)'!='0'"
+			   Text="ZONE TOOLS UI: 'npm run build' failed (exit $(NpmBuildExit)). Release build aborted." />
+
+		<!-- Debug/others: warn -->
+		<Warning Condition="'$(Configuration)'!='Release' AND '$(NpmBuildExit)'!='0'"
+				 Text="ZONE TOOLS UI: 'npm run build' failed (exit $(NpmBuildExit)). Continuing (non-Release)." />
 	</Target>
+
+
 
 	<!-- Optional: prints the active TargetFramework during build; remove anytime -->
 	<Target Name="ShowTFM" BeforeTargets="Build">
 		<Message Importance="High" Text="TargetFramework=$(TargetFramework)" />
+	</Target>
+	<Target Name="ShowConstants" BeforeTargets="Build">
+		<Message Importance="High" Text="DefineConstants=$(DefineConstants)" />
 	</Target>
 
 </Project>
